--- a/src/components/relic/styles.css
+++ b/src/components/relic/styles.css
@@ -1,20 +1,28 @@
 .relic {
-  animation-duration: 3s;
-  animation-name: floating;
-  animation-timing-function: linear;
+  position: relative;
+
+  width: 500px;
+  height: 500px;
+}
+
+.relic .image {
+  position: absolute;
+}
+
+.relic .reflection {
+  filter: brightness(200%);
+
+  animation-duration: 2s;
+  animation-name: reflection;
   animation-iteration-count: infinite;
 }
 
-@keyframes floating {
+@keyframes reflection {
   0% {
-    transform: translateY(0);
-  }
-  
-  25% {
-    transform: translateY(-10px);
+    clip-path: polygon(0 100%, 100% 100%, 100% 110%, 0 110%);
   }
 
   100% {
-    transform: translateY(0);
+    clip-path: polygon(0 -10%, 100% -10%, 100% 0%, 0% 0%);
   }
 }
