--- a/src/games/game-4/styles.css
+++ b/src/games/game-4/styles.css
@@ -2,7 +2,7 @@
   margin-bottom: var(--spacing-4);
 
   color: var(--color-neutral-100);
-  font-size: var(--text-5xl);
+  font-size: var(--text-4xl);
   text-align: center;
 }
 
@@ -109,6 +109,7 @@
 #game-4 .result-title {
   margin-block: var(--spacing-16);
 
+  color: var(--color-neutral-100);
   font-size: var(--text-7xl);
 }
 
