--- a/src/games/game-5/styles.css
+++ b/src/games/game-5/styles.css
@@ -133,7 +133,7 @@
   flex-direction: column;
   gap: var(--spacing-12);
 
-  color: var(--color-yellow-500);
+  color: var(--color-neutral-100);
 }
 
 #game-5 .result span {
