--- a/src/games/game-4/styles.css
+++ b/src/games/game-4/styles.css
@@ -11,6 +11,7 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  gap: var(--spacing-10);
 }
 
 #game-4 .units {
@@ -22,7 +23,7 @@
 #game-4 .units > div {
   display: flex;
   align-items: center;
-  gap: var(--spacing-8);
+  gap: var(--spacing-2);
   flex-direction: column;
   padding: var(--spacing-4);
 }
@@ -184,8 +185,8 @@
 }
 
 #game-4 .select-unit {
-  width: 150px;
   display: flex;
+  gap: var(--spacing-1);
   cursor: pointer;
   width: fit-content;
   align-items: center;
@@ -198,8 +199,8 @@
 }
 
 #game-4 .select-unit img {
-  width: 100%;
-  height: 100%;
+  width: 150px;
+  height: 150px;
 }
 
 #game-4 .select-unit:hover {
@@ -222,6 +223,9 @@
   background-color: var(--color-green-500);
   cursor: pointer;
   
+  width: 100px;
+  height: 100px;
+
   position: absolute;
   top: -5px;
   left: -5px;
@@ -234,8 +238,7 @@
 }
 
 #game-4 .selected-unit img {
-  width: 100%;
-  height: 100%;
+  height: 80px;
 }
 
 #game-4 .selected-unit span {
