--- a/src/games/game-4/styles.css
+++ b/src/games/game-4/styles.css
@@ -169,6 +169,29 @@
   filter: grayscale(1);
 }
 
+#game-4 .report-round {
+  display: flex;
+}
+
+#game-4 .report-titles {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+
+  color: var(--color-neutral-100);
+  font-size: var(--text-4xl);
+}
+
+#game-4 .report-units {
+  height: 50vh;
+  overflow-y: scroll;
+}
+
+#game-4 .report-round img {
+  width: 100px;
+  border-bottom: 5px solid var(--color-green-500);
+}
+
 #game-4 .select-unit {
   display: flex;
   gap: var(--spacing-1);
