--- a/src/games/game-4/styles.css
+++ b/src/games/game-4/styles.css
@@ -55,9 +55,18 @@
   flex-direction: column;
 }
 
-#game-4 .battle-unit  img {
+#game-4 .battle-unit img {
   width: 150px;
   height: 150px;
+}
+
+#game-4 .battle-unit i {
+  position: absolute;
+  padding: var(--spacing-6);
+
+  color: var(--color-neutral-100);
+  font-size: var(--text-4xl);
+  font-weight: bold;
 }
 
 #game-4 .battle-unit .unit-life {
@@ -100,7 +109,7 @@
 }
 
 #game-4 #selected-units div {
-  width: 90px;
+  width: 100px;
   height: 100px;
   position: relative;
 
@@ -142,6 +151,12 @@
   padding: var(--spacing-2);
   
   background-color: var(--color-blue-900);
+}
+
+#game-4 .result-unit i {
+  color: var(--color-neutral-100);
+  font-size: var(--text-xl);
+  font-weight: bold;
 }
 
 #game-4 .result-unit span {
@@ -282,6 +297,12 @@
   left: -5px;
   bottom: -5px;
   right: -5px;
+}
+
+#game-4 .selected-unit i {
+  color: var(--color-neutral-100);
+  font-size: var(--text-2xl);
+  font-weight: bold;
 }
 
 #game-4 .selected-unit:hover {
