Atualiza o componente Game 4

--- a/src/games/game-4/styles.css
+++ b/src/games/game-4/styles.css
@@ -214,6 +214,11 @@
   gap: var(--spacing-2);
 }
 
+#game-4 .report-unit {
+  color: var(--color-neutral-100);
+  font-size: var(--text-2xl);
+}
+
 #game-4 .report-unit-live {
   display: flex;
   flex-direction: column;
