Atualiza o componente Game 4

--- a/src/games/game-4/styles.css
+++ b/src/games/game-4/styles.css
@@ -271,3 +271,11 @@
   color: var(--color-neutral-900);
   cursor: pointer;
 }
+
+#game-4 .unit-index {
+  font-weight: bold;
+  position: absolute;
+  font-size: var(--text-xl);
+  top: var(--spacing-4);
+  left: var(--spacing-4);
+}
