--- a/src/games/game-1/styles.css
+++ b/src/games/game-1/styles.css
@@ -10,7 +10,7 @@
   height: var(--spacing-16);
   justify-content: space-evenly;
   margin-bottom: var(--spacing-8);
-
+  
   color: var(--color-neutral-100);
   font-size: var(--text-4xl);
   text-align: center;
@@ -27,16 +27,13 @@
   gap: var(--spacing-8);
 }
 
-#game_1 #message img {
-  width: 3rem;
-}
 
 #game_1 .resources {
-  gap: var(--spacing-8);
   width: 100%;
   display: flex;
+  margin-top: 10vh;
   flex-direction: row;
-  margin-top: var(--spacing-20);
+  gap: var(--spacing-8);
   justify-content: space-around;
 }
 
@@ -64,7 +61,7 @@
 .animation-increase {
   right: 0;
   position: absolute;
-
+  
   animation-duration: 1s;
   animation-name: increase;
 }
@@ -72,7 +69,7 @@
 .animation-decrease {
   right: 0;
   position: absolute;
-
+  
   animation-duration: 1s;
   animation-name: decrease;
 }
@@ -80,7 +77,7 @@
 #game_1 .resources {
   padding: var(--spacing-4);
   margin-bottom: var(--spacing-8);
-
+  
   box-shadow: inset 0 0 50px 20px var(--color-neutral-900);
   border-block: 2px solid var(--color-orange-500);
 }
@@ -90,10 +87,6 @@
   position: relative;
   align-items: center;
   gap: var(--spacing-4);
-}
-
-#game_1 .resources img {
-  height: var(--spacing-12);
 }
 
 #game_1 .resources > div span {
@@ -109,9 +102,9 @@
 }
 
 #game_1 .market .image {
-  margin-right: var(--spacing-8);
   display: flex;
   align-items: center;
+  margin-right: var(--spacing-8);
 }
 
 #game_1 .market .image img {
@@ -121,10 +114,10 @@
 }
 
 #game_1 .exchange {
+  gap: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 1rem;
 }
 
 #game_1 .sell, 
@@ -135,20 +128,20 @@
 
 #game_1 .exchange button {
   display: flex;
+  position: relative;
   align-items: center;
   flex-direction: column;
   width: var(--spacing-24);
   height: var(--spacing-24);
   
-  
   box-shadow: inset 0px 0px 10px 5px var(--color-neutral-900);
   border: 2px solid var(--color-neutral-500);
+  color: var(--color-neutral-100);
   font-size: var(--text-xl);
   background: transparent;
   cursor: pointer;
 
   transition: all .2s;
-  position: relative;
 }
 
 #game_1 .exchange button img {
@@ -164,16 +157,13 @@
   top: var(--spacing-2);
   left: var(--spacing-2);
 
-  color: var(--color-neutral-100);
-  font-weight: bolder;
+  font-weight: bold;
 }
 
 #game_1 .exchange button .type {
   z-index: 10;
   position: absolute;
   bottom: var(--spacing-2);
-
-  color: var(--color-neutral-100);
 }
 
 #game_1 .exchange button:disabled {
@@ -183,4 +173,6 @@
 
 #game_1 .exchange button:not(:disabled):hover {
   filter: brightness(1.2);
+  border-color: var(--color-yellow-500) ;
+  color: var(--color-yellow-500);
 }
