--- a/src/games/game-3/styles.css
+++ b/src/games/game-3/styles.css
@@ -1,8 +1,10 @@
 #game_3 {
+  width: 100%;
+  height: 100%;
   display: flex;
   gap: var(--spacing-8);
-  flex-direction: column;
-  padding-inline: var(--spacing-8);
+  flex-direction: column;  
+  justify-content: center;
 }
 
 #game_3 #header {
@@ -11,7 +13,7 @@
 
 #game_3 #header h2 {
   color: var(--color-neutral-100);
-  font-size: var(--text-4xl);
+  font-size: var(--text-5xl);
 }
 
 #game_3 #main {
@@ -29,19 +31,27 @@
   font-size: var(--spacing-8);
 }
 
+#game_3 .gates {
+  width: 100%;
+  display: flex;
+  gap: var(--spacing-8);
+  padding: var(--spacing-8);
+}
+
 #game_3 .button-gate {
-  width: 256px;
-  height: 256px;
+  flex: 1;
+  aspect-ratio: 1 / 1;
+
   overflow: hidden;
   position: relative;
-  
   box-sizing: content-box;
 }
 
 #game_3 .button-gate img {
-  left: 0;
   right: 0;
   bottom: 0;
+  width: 100%;
+  height: 100%;
   position: absolute;
 }
 
@@ -50,12 +60,7 @@
 }
 
 #game_3 .button-gate:hover #gate {
-  bottom: 100px;
-}
-
-#game_3 .gates {
-  display: flex;
-  gap: var(--spacing-8);
+  bottom: 50%;
 }
 
 #game_3 .button-gate {
