--- a/src/games/game-5/styles.css
+++ b/src/games/game-5/styles.css
@@ -140,24 +140,24 @@
   font-size: var(--text-5xl);
 }
 
-#game-5 .response {
-  width: 100%;
-  display: flex;
-  padding: var(--spacing-8);
-  margin-block: var(--spacing-4);
-  justify-content: space-between;
-}
-
 #game-5 .question-options {
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  margin-bottom: var(--spacing-12);
 }
 
-#game-5 .response button {
-  width: fit-content;
+#game-5 .question-buttons {
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-8);
+  justify-content: space-between;
+  padding-inline: var(--spacing-12);
 }
+
+
+
 
 
 /* .questionario {
