--- a/src/games/game-4/styles.css
+++ b/src/games/game-4/styles.css
@@ -39,29 +39,15 @@
 }
 
 #game-4 .units {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  text-align: center;
+  display: grid;
   gap: var(--spacing-8);
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
-#game-4 .units > div {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  gap: var(--spacing-2);
-  flex-direction: column;
-}
-
-#game-4 .units > div > span {
-  color: var(--color-neutral-100);
-  font-size: var(--text-4xl);
-  font-style: italic;
-}
-
-#game-4 .units > div > div {
-  width: 10vh;
+#game-4 .units > div > img{
+  height: 15vh;
+  object-fit: cover;
 }
 
 #game-4 .battle {
