--- a/src/games/game-4/styles.css
+++ b/src/games/game-4/styles.css
@@ -18,7 +18,6 @@
   width: 100%;
   display: flex;
   align-items: center;
-  gap: var(--spacing-14);
   flex-direction: column;
   justify-content: center;
 }
@@ -26,6 +25,7 @@
 #game-4 #selected-units {
   display: flex;
   gap: var(--spacing-8);
+  margin-bottom: var(--spacing-8);
 }
 
 #game-4 #selected-units > div {
@@ -63,50 +63,50 @@
 }
 
 #game-4 .battle > div img {
-  width: 20vh;
+  height: 15vh;
+  object-fit: cover;
+}
+
+#game-4 .result-header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: var(--spacing-8);
 }
 
 #game-4 .result-title {
   color: var(--color-neutral-100);
-  font-size: var(--text-5xl);
+  font-size: var(--text-6xl);
   font-weight: bold;
-}
-
-#game-4 .result-buttons {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
 }
 
 #game-4 .top-units > div,
 #game-4 .bottom-units > div {
   display: flex;
   gap: var(--spacing-10);
-  align-items: space-around;
 }
 
 #game-4 .top-units > div img,
 #game-4 .bottom-units > div img {
-  width: 10vh;
+  height: 15vh;
+  object-fit: cover;
 }
 
 #game-4 .top-units h2,
 #game-4 .bottom-units h2 {
-  margin-bottom: var(--spacing-4);
+  margin-block: var(--spacing-6) var(--spacing-4);
   
   color: var(--color-neutral-100);
   font-size: var(--text-3xl);
   text-align: center;
 }
 
-#game-4 .report-titles {
-  width: 100%;
-  display: flex;
-  gap: var(--spacing-10);
-  justify-content: space-evenly;
+#game-4 .report-result {
+  margin-block: var(--spacing-8) var(--spacing-4);
 
   color: var(--color-neutral-100);
-  font-size: var(--text-4xl);
+  font-size: var(--text-5xl);
 }
 
 #game-4 .report-header {
@@ -114,6 +114,7 @@
   display: flex;
   align-items: center;
   gap: var(--spacing-10);
+  margin-top: var(--spacing-8);
   justify-content: space-between;
 }
 
@@ -123,28 +124,27 @@
   font-size: var(--text-5xl);
 }
 
-#game-4 .report-units {
+#game-4 .report-titles-units {
   display: flex;
-  flex-direction: column;
-  gap: var(--spacing-5);
+  gap: var(--spacing-4);
   flex-direction: column;
 }
 
-#game-4 .report-units > div {
-  width: 100%;
+#game-4 .report-titles {
   display: flex;
-  gap: var(--spacing-10);
-  justify-content: space-evenly;
+  justify-content: space-between;
+
+  color: var(--color-neutral-100);
+  font-size: var(--text-4xl);
+}
+
+#game-4 .report-units {
+  display: flex;
+  gap: var(--spacing-12);
 }
 
 #game-4 .report-units > div img {
-  width: 20vh;
-}
-
-#game-4 .report-units strong {
-  color: var(--color-neutral-100);
-  font-size: var(--text-4xl);
-  text-align: center;
+  object-fit: cover;
 }
 
 #game-4 .unit {
