--- a/src/games/game-5/styles.css
+++ b/src/games/game-5/styles.css
@@ -1,3 +1,7 @@
+#game-5 {
+  padding-inline: var(--spacing-8);
+}
+
 #game-5 #title {
   margin-bottom: var(--spacing-4);
 
@@ -138,6 +142,12 @@
 
 #game-5 .result span {
   font-size: var(--text-5xl);
+}
+
+#game-5 .response-header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 #game-5 .question-options {
